src/objects/Registry_Unit_Installed_System_Junction__c.object
<CustomObject>
    <description>This object relates SREC Registry Units with Installed Systems in a many-to-many relationship.</description>
    <fields>
        <fullName>Astrum_Est_Annual_Prod_Roll_up__c</fullName>
        <description>Estimated annual production</description>
        <inlineHelpText>Estimated annual production</inlineHelpText>
        <label>Astrum Est Annual Prod (Roll-up)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Astrum_Est_Annual_SRECs_Roll_up__c</fullName>
        <description>Estimated annual SRECs</description>
        <inlineHelpText>Estimated annual SRECs</inlineHelpText>
        <label>Astrum Est Annual SRECs (Roll-up)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Astrum_Estimated_Annual_Production_kWh__c</fullName>
        <formula>Installed_System__r.Projected_Annual_Production_kWh_yr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Astrum Estimated Annual Production (kWh)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Astrum_Estimated_Annual_SRECs__c</fullName>
        <formula>Installed_System__r.Estimated_Annual_SRECs_Generated__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Astrum Estimated Annual SRECs</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Installed_System__c</fullName>
        <description>This is the Installed System that the Registry Unit-Installed System Junction record is associated with.</description>
        <inlineHelpText>This is the Installed System that the Registry Unit-Installed System Junction record is associated with.</inlineHelpText>
        <label>Installed System</label>
        <referenceTo>Installed_System__c</referenceTo>
        <relationshipLabel>SREC Registry Units</relationshipLabel>
        <relationshipName>Registry_Unit_Installed_System_Junctions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SREC_Registry_Unit__c</fullName>
        <description>This is the SREC Registry Unit that the Registry Unit-Installed System Junction record is associated with.</description>
        <inlineHelpText>This is the SREC Registry Unit that the Registry Unit-Installed System Junction record is associated with.</inlineHelpText>
        <label>SREC Registry Unit</label>
        <referenceTo>SREC_Registry_Unit__c</referenceTo>
        <relationshipLabel>Installed Systems</relationshipLabel>
        <relationshipName>Registry_Unit_Installed_System_Junctions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Registry Unit-Installed System Junction</label>
    <nameField>
        <displayFormat>Jct-{0000000000}</displayFormat>
        <label>Registry Unit Installed System Junction</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Registry Unit-Installed System Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>